Alterações pontuais feitas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
@@ -71,6 +70,9 @@ header p{
 
 #navegation{
     background-color: var(--color2);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
 }
 
 #navegation  li{
